--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token":"MTEwNTYwMzI2NzUyMzc3MjQxNw.GkOvBJ.UNDBl2ywrHDHmmLxwbTQ18y_gYl05q-oDA5G2Y",
+    "token":"TOKEN HERE",
     "prefix":"+",
     "activity": "ACTIVITY-HERE" ,
     "log_channel": null ,
